Form page structure cleaned up to use one URL. Color scheme altered to be more consistent. New form page (School selection) added. Form page button functionality/conditional rendering improved.

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -152,7 +152,7 @@ body {
 
 /* SECTION - FOOTER -------------------------------------------------*/
 .footer-div {
-  background-color: #2a292c;
+  /* background-color: #2a292c; */
   padding-top: 30px;
   font-size: 0.9em;
 }
