--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -49,8 +49,9 @@
 }
 
 .check-square {
+  aspect-ratio: 1;
   height: 20px;
-  width: 20px;
+  width: auto;
   border-radius: 15%;
   border: 2px solid #999999;
   display: inline-block;
